Attempted to fix overflow of member divs

--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -686,3 +686,8 @@ iframe {
     width:100%;
   }
 }
+.members {
+  @media(max-width:450px){
+    margin-bottom:100px;
+  }
+}
